--- a/demo/demo.html
+++ b/demo/demo.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <title>Live2D 看板娘 / Demo</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css">
+<script src="https://cdn.jsdelivr.net/gh/techquincyhu/live2d-widget@latest/autoload.js"></script>
+
 <style>
 #github svg {
 	transition: all 1s;
